[package]
name = "actix-chat-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-files = "0.6.2"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
anyhow = "1.0.75"
derive_more = "0.99.17"
futures-util = "0.3.28"
uuid = { version = "1.4.1", features = ["v4"] }
